--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "lodash": "^4.17.21",
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
